# qdrant-codebase-mcp

./: .commitlintrc.json  .gitignore  .npmignore  .secretlintignore  .secretlintrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROGRESS.md  README.md  SECURITY.md  config.example.yml  docker-compose.yml  eslint.config.mjs  knip.json  mcp-registry.json  mcp.template.json  package-lock.json  package.json  program.md  pyproject.toml  tsconfig.json  vitest.config.ts
.changeset/: four-bugs-search.md  plenty-deserts-occur.md  tiny-geese-trade.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
.husky/: pre-commit  pre-push
qdrant_codebase_mcp_launcher/: __init__.py  launcher.py
scripts/: publish.sh
src/: bootstrap.ts  index.ts  logger.ts  mcp-entry.ts  metrics.ts
src/api/: server.routes.ts  server.ts
src/chunker/: chunker.ts
src/config/: loader.helpers.ts  loader.ts  schema.ts
src/embedding/: adapter.ts  factory.ts  fastembed-adapter.ts  openai-compatible-adapter.ts  types.ts
src/indexing/: coordinator.ts
src/mcp/: runtime-defaults.ts  search-code-tool.ts  server.ts  shutdown.ts  tool-registration.ts  tool-response.ts
src/qdrant/: adapter.helpers.ts  adapter.ts  client.helpers.ts  error.helpers.ts  upsert.helpers.ts
src/scanner/: git.ts  scanner.ts
src/search/: service.ts
src/types/: index.ts
src/utils/: hashing.ts
src/watcher/: watcher.ts
tests/: test_uvx_launcher.py  tsconfig.json
(+13 files in other folders)
