[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "qdrant-codebase-mcp"
version = "0.1.0"
description = "Python launcher for running qdrant-codebase-mcp from source with uvx."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "qdrant-codebase-mcp contributors" }]

[project.scripts]
qdrant-codebase-mcp = "qdrant_codebase_mcp_launcher.launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["qdrant_codebase_mcp_launcher"]

[tool.hatch.build.targets.wheel.force-include]
"package.json" = "package.json"
"package-lock.json" = "package-lock.json"
"tsconfig.json" = "tsconfig.json"
"src" = "src"

[tool.hatch.build.targets.sdist]
include = [
  "/qdrant_codebase_mcp_launcher",
  "/package.json",
  "/package-lock.json",
  "/tsconfig.json",
  "/src",
  "/README.md",
  "/LICENSE",
]
